--- a/fotogaleri.html
+++ b/fotogaleri.html
@@ -39,30 +39,35 @@
         </div>
       </div>
     </nav>
+<body>
+  <br><br><br>
+  <div class="container">
+    <h3>How I Spent My Holiday</h3>
+    <br>
+    <h5>• Menonton Bioskop</h5>
+    <img src="nonton2.jpg" alt="nonton2">
+    <img src="nonton3.jpg" alt="nonton3">
+    <img src="nonton1.jpg" alt="nonton1">
+    <br><br>
+    <h5>• Menonton Festival</h5>
+    <img src="konser2.jpg" alt="konser2">
+    <img src="konser1.jpg" alt="konser1">
+    <img src="konser3.jpg" alt="konser3">
+    <br><br>
+    <h5>• Pergi Ke Taman Hiburan</h5>
+    <img src="jungle3.jpg" alt="jungle3">
+    <img src="jungle1.jpg" alt="jungle1">
+    <img src="jungle2.jpg" alt="jungle2">
+    <br><br>
+    <h5>• Sleepover</h5>
+    <img src="cla1.jpg" alt="cla1">
+    <img src="cla2.jpg" alt="cla2">
+    <img src="cla3.jpg" alt="cla3">
+    <br><br>
 
-<br> <br><br><br><br><br><br><br><br>
-     <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h1 class="display-4">Gina Ramadhania Wahyu</h1>      
-        <p class="lead">Welcome to my website</p>
-      </div>
-    </div>
-<!-- footer -->
-  <footer>
-    <div class="container">
-      <small>Copyright &copy; 2021 - Gina Ramadhania Wahyu. SMK-SMAK Bogor.</small>
-    </div>
-  </footer>
 
-    <!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-    -->
-  </body>
+  </div>
+</body>
+</body>
 </html>
