--- a/cek.html
+++ b/cek.html
@@ -39,30 +39,37 @@
         </div>
       </div>
     </nav>
+<body>
+        <br><br><br>
+        <div class="container">
+        <h1>Profil Penulis</h1>
+        <br>
+              <div class="container">
+        <img src="Gina Ramadhania Wahyu.jpeg" alt="Gina Ramadhania Wahyu">
+        <br><br>
+        <body>
+          <p>Saya sedang menempuh pendidikan di SMK-SMAK Bogor dan berada di kelas XI-2. Dalam waktu luang saya senang menghabiskan waktu saya untuk merangkum materi, membaca buku, mendengarkan lagu, olahraga, berpergi bermain bersama teman atau juga hanya menggulir lini masa akun twitter saya hingga ke petang. </p>
+          <br>
+          <table>
+        <tr>
+          <th>Nama</th>
+        <td>Gina Ramadhania Wahyu</td>
+        </tr>
+        <tr>
+          <th>Kelas</th>
+          <td>XI-2</td>
+        </tr>
+        <tr>
+          <th>Tempat, Tanggal Lahir</th>
+          <td>Bogor, 28 Oktober 2004</td>
+        </tr>
+         <tr>
+          <th>Hobi</th>
+          <td>Membaca dan mendengarkan lagu</td>
+        </tr>
+      </table> 
+    <br><br>
 
-<br> <br><br><br><br><br><br><br><br>
-     <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h1 class="display-4">Gina Ramadhania Wahyu</h1>      
-        <p class="lead">Welcome to my website</p>
-      </div>
-    </div>
-<!-- footer -->
-  <footer>
-    <div class="container">
-      <small>Copyright &copy; 2021 - Gina Ramadhania Wahyu. SMK-SMAK Bogor.</small>
-    </div>
-  </footer>
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-    -->
-  </body>
+</body>
+</body>
 </html>
