--- a/kontak.html
+++ b/kontak.html
@@ -39,30 +39,19 @@
         </div>
       </div>
     </nav>
-
-<br> <br><br><br><br><br><br><br><br>
-     <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h1 class="display-4">Gina Ramadhania Wahyu</h1>      
-        <p class="lead">Welcome to my website</p>
-      </div>
-    </div>
-<!-- footer -->
-  <footer>
-    <div class="container">
-      <small>Copyright &copy; 2021 - Gina Ramadhania Wahyu. SMK-SMAK Bogor.</small>
-    </div>
-  </footer>
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-    -->
-  </body>
+<body>
+  <br><br><br>
+  <div class="container">
+  <H3>FIND ME ON</H3>
+  <br>
+   <h5>Instagram</h5>
+   <p><a href="https://www.instagram.com/gieenar">@gieenar</a></p>
+   <br>
+    <h5>E-mail </h5>
+    <p><a href="mailto:ginarama65@smakbo.sch.id">ginarama65@smakbo.sch.id</p>
+      <br>
+    <h5>Telp/Whatsapp</h5>
+    <p><a href="https://wa.me/085858066861"> 085858066861</a></p>
+</body>
+</body>
 </html>
