--- a/pengalaman.html
+++ b/pengalaman.html
@@ -39,30 +39,16 @@
         </div>
       </div>
     </nav>
-
-<br> <br><br><br><br><br><br><br><br>
-     <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h1 class="display-4">Gina Ramadhania Wahyu</h1>      
-        <p class="lead">Welcome to my website</p>
-      </div>
-    </div>
-<!-- footer -->
-  <footer>
-    <div class="container">
-      <small>Copyright &copy; 2021 - Gina Ramadhania Wahyu. SMK-SMAK Bogor.</small>
-    </div>
-  </footer>
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-    -->
+<body>
+  <br> <br> <br> <br>
+  <div class="container">
+  <h3>Pembelajaran Jarak Jauh Selama Pandemi Covid-19</h3>
+   <br> <br>
+   <div class="container">
+  <p>Hampir 2 tahun terakhir, kegiatan pembelajaran luring ditiadakan dan tentu saja banyak hal yang berubah. Setiap orang dituntut untuk dapat membiasakan diri pada kenyataan ini, salah satunya pada bidang pendidikan. Sekolah diadakan secara  daring. Jauh sebelum pembelajaran daring berlangsung, SMK-SMAK Bogor telah memiliki lms dan beberapa mata pelajaran pun menyampaikan materinya melalui google classroom. Namun kali ini berbeda, jika sebelumnya orang orang dapat berlajar di kelas secara tatap muka, kali ini orang orang hanya dapat berinteraksi melalui gadgetnya. Hal ini merupakan hal baru bagi sebagian orang, karena sebelum adanya pandemi telah ada sekolah yang melakukan pembelajaran virtual.</p>
+  <div class="container">
+  <p>Semua hal bermula pada Maret 2020 ketika adanya pemberitahuan bahwa sekolah diliburkan selama dua minggu yang nyatanya masih berlangsung hingga hari ini. Pembelajaran daring ini membawa banyak hal positif dan negatif. Dampak positifnya mulai dari kita dapat mengetahui banyak hal dan teknologi yang sebelumnya belum kita ketahui, kita pun memiliki waktu istirahat yang lebih banyak dari sebelumnya. Di sisi lain pembelajaran daring ini sangat tidak baik untuk kesehatan mata karena kita selalu berada di depan layar gadget kita, juga terkadang ada gangguan pada saat pembelajaran seperti jaringan tidak stabil dan sebagainya juga materi terkadang lebih sulit untuk dimengerti terlebih lagi untuk pembelajaran praktik.</p>
+   <br> <br> <br>
+</body>
   </body>
-</html>
+  </html>
