--- a/cek.html
+++ b/cek.html
@@ -15,31 +15,31 @@
 
   <body id="page-top">
     
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand nav-link js-scroll-trigger" href="index.html">GINA</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="index.html">GINA</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav"
+          <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="cek.html">PROFILE</a>
-            </li>
-             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="pengalaman.html">SFH</a>
+              <a class="nav-link active" href="cek.html">PROFILE</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="fotogaleri.html">GALLERY</a>
+              <a class="nav-link" href="pengalaman.html">SFH</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="kontak.html">CONTACT ME</a>
+              <a class="nav-link" href="fotogaleri.html">GALLERY</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="kontak.html">CONTACT ME</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-<body>
+
         <br><br><br>
         <div class="container">
         <h1>Profil Penulis</h1>
@@ -70,6 +70,7 @@
       </table> 
     <br><br>
 
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+
 </body>
 </html>
