--- a/fotogaleri.html
+++ b/fotogaleri.html
@@ -1,73 +1,70 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
 
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="css.css" />
 
     <title>Gina Wahyu</title>
   </head>
 
   <body id="page-top">
-    
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand nav-link js-scroll-trigger" href="index.html">GINA</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="index.html">GINA</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav"
+          <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="cek.html">PROFILE</a>
-            </li>
-             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="pengalaman.html">SFH</a>
+              <a class="nav-link" href="cek.html">PROFILE</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="fotogaleri.html">GALLERY</a>
+              <a class="nav-link" href="pengalaman.html">SFH</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="kontak.html">CONTACT ME</a>
+              <a class="nav-link active" href="fotogaleri.html">GALLERY</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="kontak.html">CONTACT ME</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-<body>
-  <br><br><br>
-  <div class="container">
-    <h3>How I Spent My Holiday</h3>
-    <br>
-    <h5>• Menonton Bioskop</h5>
-    <img src="nonton2.jpg" alt="nonton2">
-    <img src="nonton3.jpg" alt="nonton3">
-    <img src="nonton1.jpg" alt="nonton1">
-    <br><br>
-    <h5>• Menonton Festival</h5>
-    <img src="konser2.jpg" alt="konser2">
-    <img src="konser1.jpg" alt="konser1">
-    <img src="konser3.jpg" alt="konser3">
-    <br><br>
-    <h5>• Pergi Ke Taman Hiburan</h5>
-    <img src="jungle3.jpg" alt="jungle3">
-    <img src="jungle1.jpg" alt="jungle1">
-    <img src="jungle2.jpg" alt="jungle2">
-    <br><br>
-    <h5>• Sleepover</h5>
-    <img src="cla1.jpg" alt="cla1">
-    <img src="cla2.jpg" alt="cla2">
-    <img src="cla3.jpg" alt="cla3">
-    <br><br>
 
+    <br /><br /><br />
+    <div class="container">
+      <h3>How I Spent My Holiday</h3>
+      <br />
+      <h5>• Menonton Bioskop</h5>
+      <img src="nonton2.jpg" alt="nonton2" />
+      <img src="nonton3.jpg" alt="nonton3" />
+      <img src="nonton1.jpg" alt="nonton1" />
+      <br /><br />
+      <h5>• Menonton Festival</h5>
+      <img src="konser2.jpg" alt="konser2" />
+      <img src="konser1.jpg" alt="konser1" />
+      <img src="konser3.jpg" alt="konser3" />
+      <br /><br />
+      <h5>• Pergi Ke Taman Hiburan</h5>
+      <img src="jungle3.jpg" alt="jungle3" />
+      <img src="jungle1.jpg" alt="jungle1" />
+      <img src="jungle2.jpg" alt="jungle2" />
+      <br /><br />
+      <h5>• Sleepover</h5>
+      <img src="cla1.jpg" alt="cla1" />
+      <img src="cla2.jpg" alt="cla2" />
+      <img src="cla3.jpg" alt="cla3" />
+      <br /><br />
+    </div>
 
-
-  </div>
-</body>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+  </body>
 </html>
