--- a/index.html
+++ b/index.html
@@ -1,68 +1,65 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous" />
 
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="css.css" />
 
     <title>Gina Wahyu</title>
   </head>
 
   <body id="page-top">
-    
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand nav-link js-scroll-trigger" href="index.html">GINA</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="index.html">GINA</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav"
+          <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="cek.html">PROFILE</a>
-            </li>
-             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="pengalaman.html">SFH</a>
+              <a class="nav-link" href="cek.html">PROFILE</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="fotogaleri.html">GALLERY</a>
+              <a class="nav-link" href="pengalaman.html">SFH</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="kontak.html">CONTACT ME</a>
+              <a class="nav-link" href="fotogaleri.html">GALLERY</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="kontak.html">CONTACT ME</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-<br> <br><br><br><br><br><br><br><br>
-     <div class="jumbotron jumbotron-fluid">
-    <div class="container">
-      <h1 class="display-4">Gina Ramadhania Wahyu</h1>      
+    <br />
+    <br /><br /><br /><br /><br /><br /><br /><br />
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container">
+        <h1 class="display-4">Gina Ramadhania Wahyu</h1>
         <p class="lead">Welcome to my website</p>
       </div>
     </div>
-<!-- footer -->
-  <footer>
-    <div class="container">
-      <small>Copyright &copy; 2021 - Gina Ramadhania Wahyu. SMK-SMAK Bogor.</small>
-    </div>
-  </footer>
+    <!-- footer -->
+    <footer>
+      <div class="container">
+        <small>Copyright &copy; 2021 - Gina Ramadhania Wahyu. SMK-SMAK Bogor.</small>
+      </div>
+    </footer>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-
     <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
+    <!-- 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
-    -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script> -->
   </body>
 </html>
