--- a/pengalaman.html
+++ b/pengalaman.html
@@ -15,31 +15,32 @@
 
   <body id="page-top">
     
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand nav-link js-scroll-trigger" href="index.html">GINA</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="index.html">GINA</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav"
+          <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="cek.html">PROFILE</a>
-            </li>
-             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="pengalaman.html">SFH</a>
+              <a class="nav-link " href="cek.html">PROFILE</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="fotogaleri.html">GALLERY</a>
+              <a class="nav-link active" href="pengalaman.html">SFH</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="kontak.html">CONTACT ME</a>
+              <a class="nav-link" href="fotogaleri.html">GALLERY</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="kontak.html">CONTACT ME</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
-<body>
+
+
   <br> <br> <br> <br>
   <div class="container">
   <h3>Pembelajaran Jarak Jauh Selama Pandemi Covid-19</h3>
@@ -49,6 +50,9 @@
   <div class="container">
   <p>Semua hal bermula pada Maret 2020 ketika adanya pemberitahuan bahwa sekolah diliburkan selama dua minggu yang nyatanya masih berlangsung hingga hari ini. Pembelajaran daring ini membawa banyak hal positif dan negatif. Dampak positifnya mulai dari kita dapat mengetahui banyak hal dan teknologi yang sebelumnya belum kita ketahui, kita pun memiliki waktu istirahat yang lebih banyak dari sebelumnya. Di sisi lain pembelajaran daring ini sangat tidak baik untuk kesehatan mata karena kita selalu berada di depan layar gadget kita, juga terkadang ada gangguan pada saat pembelajaran seperti jaringan tidak stabil dan sebagainya juga materi terkadang lebih sulit untuk dimengerti terlebih lagi untuk pembelajaran praktik.</p>
    <br> <br> <br>
-</body>
+
+
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+
   </body>
   </html>
